# rpg

./: README.md
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-server.yml  cmake-wasm.yml  cmake-windows.yml
rpg/: CMakeLists.txt  cEmptyComponentTemplateClass.cpp  cEmptyComponentTemplateClass.h  cPathFollower.cpp  cPathFollower.h  cRpgPlayer.cpp  cRpgPlayer.h  cRpgPlayerCamera.cpp  cRpgPlayerCamera.h  cTerrain.cpp  cTerrain.h  main.cpp  rpgBuildConfig.in.h  rpgGame.cpp  rpgGame.h  rpgMaterialFlatNoise.cpp  rpgMaterialFlatNoise.h  rpgMaterialFlatNoiseTexture.cpp  rpgMaterialFlatNoiseTexture.h  rpgSceneServer.cpp  rpgSceneServer.h  rpgWorld.cpp  rpgWorld.h  rpgWorldSquare.h
rpg/GameResources/: imgui.ini
rpg/GameResources/materials/: flatNoiseTest.mat  player.mat  terrain.mat  tree.mat
rpg/GameResources/models/: player_warrior.fbx  tree.fbx
rpg/GameResources/otemps/: player_gfx.jobj
rpg/GameResources/scenes/: client.scn  main.scn  obj_templates.scn  pid_tests.scn  server.scn
rpg/GameResources/scripts/: TestComponent.lua
rpg/GameResources/server/: rpg-server.service
rpg/GameResources/settings/: enginesettings.es
rpg/GameResources/shaders/: flatNoise.glsl  flatNoiseTexture.glsl
rpg/PidStuff/: PIDController.cpp  PIDController.h  cPIDControlPad.cpp  cPIDControlPad.h
